...
    var body: some View {
        VStack {
            view(for: game.masterCode)
            ScrollView {
                view(for: game.guess)
                    .accessibilityElement(children: .contain)
                    .accessibilityIdentifier("guess_code")
                ForEach(game.attempts.indices.reversed(), id: \.self) { index in
                    view(for: game.attempts[index])
                        .accessibilityElement(children: .contain)
                        .accessibilityIdentifier("attempt_code_\(index)")
                }
            }
...
            withAnimation {
                game.attemptGuess()
            }
        }
        .font(.system(size: 80))
        .minimumScaleFactor(0.1)
        .accessibilityIdentifier("guess_button")
        .disabled(game.isGuessAttemptBlank() || game.isDuplicateAttempt())
    }
    
    private var restartButton: some View {
        Button("Restart") {
            withAnimation {
...
